# vendor_sprd_platform_packages_apps_EngineerMode

./: Android.bp  AndroidManifest.xml  build.gradle
annotation/: Android.bp
annotationprocessor/: Android.bp  build.gradle
core/: Android.bp  build.gradle
factory/: Android.bp  build.gradle
jni/: Android.bp
jni/src/: CMakeLists.txt  jniutils.cpp
libs/: Android.bp
res/anim/: grow_fade_in_center.xml
res/drawable/: bg_item.xml  btn_help_selected.xml  slogui_checkbox.xml  slogui_radio.xml
res/layout/: about_ylog.xml  activity_local_release.xml  activity_main.xml  activity_modem_assert.xml  activity_sensors_id.xml  activity_simlock_lock.xml  activity_slog_common_control.xml  activity_slog_settings.xml  adb_shell.xml  apn_preference_layout.xml  array_item.xml  attachtime.xml  bt_ble_rx.xml  bt_ble_tx.xml  bt_rx.xml  bt_tx.xml  bt_tx_mode.xml  cell_handover_lte.xml  cell_handover_wg.xml  cell_reselect_lte.xml  click_editpreference_layout.xml  connectivity.xml  coulometer_power.xml  coulometer_power_chart.xml  dedicate_cga_pdp.xml  dedicate_cgd_pdp.xml  dedicate_cge_pdp.xml  dedicate_cgt_pdp.xml  detailed_item.xml  dialog_fps.xml  droptimes.xml  earphone_fragment_main.xml  fm_audio_mode.xml  fm_fragment_main.xml  fm_noise_scan.xml  fm_reg_mode.xml  fm_tune_mode.xml  frequency_point.xml  g_frequency.xml  gprs_set.xml  (+37 more)
res/layout-1920x1080/: adb_shell.xml
res/layout-800x480/: adb_shell.xml  coulometer_power.xml  earphone_fragment_main.xml
res/layout-854x480/: adb_shell.xml  coulometer_power.xml
res/menu/: pre_check.xml  slog_mode_menu.xml  srs_set.xml  (+1 more)
(+403 files in other folders)
